new code change

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -22,110 +22,110 @@
 
 zone "alacarte.fm" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/alacarte.fm.drg";
+    file "/etc/bind/dns_registers/bemisc.com/alacarte.fm.drg";
 };
 
 zone "bargania.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/bargania.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/bargania.com.drg";
 };
 
 zone "bemisc.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/bemisc.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/bemisc.com.drg";
 };
 
 zone "cargoshiphq.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/cargoshiphq.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/cargoshiphq.com.drg";
 };
 
 zone "cognicis.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/cognicis.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/cognicis.com.drg";
 };
 
 zone "frontdoorhq.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/frontdoorhq.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/frontdoorhq.com.drg";
 };
 
 zone "getcolony.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/getcolony.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/getcolony.com.drg";
 };
 
 zone "getomnierp.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/getomnierp.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/getomnierp.com.drg";
 };
 
 zone "getomniplatform.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/getomniplatform.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/getomniplatform.com.drg";
 };
 
 zone "grandub.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/grandub.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/grandub.com.drg";
 };
 
 zone "hive.pt" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/hive.pt.drg";
+    file "/etc/bind/dns_registers/bemisc.com/hive.pt.drg";
 };
 
 zone "kiliro.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/kiliro.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/kiliro.com.drg";
 };
 
 zone "ohub.co" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/ohub.co.drg";
+    file "/etc/bind/dns_registers/bemisc.com/ohub.co.drg";
 };
 
 zone "ostore.co" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/ostore.co.drg";
+    file "/etc/bind/dns_registers/bemisc.com/ostore.co.drg";
 };
 
 zone "panzerini.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/panzerini.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/panzerini.com.drg";
 };
 
 zone "pecway.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/pecway.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/pecway.com.drg";
 };
 
 zone "pratododia.pt" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/pratododia.pt.drg";
+    file "/etc/bind/dns_registers/bemisc.com/pratododia.pt.drg";
 };
 
 zone "startomni.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/startomni.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/startomni.com.drg";
 };
 
 zone "takethebill.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/takethebill.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/takethebill.com.drg";
 };
 
 zone "watchtowerhq.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/watchtowerhq.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/watchtowerhq.com.drg";
 };
 
 zone "whycolony.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/whycolony.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/whycolony.com.drg";
 };
 
 zone "yodna.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/bemisc.com/yodna.com.drg";
+    file "/etc/bind/dns_registers/bemisc.com/yodna.com.drg";
 };
