--- a/configuration/hive.conf
+++ b/configuration/hive.conf
@@ -22,16 +22,21 @@
 
 zone "16.172.in-addr.arpa" IN {
         type master;
-        file "/etc/bind/pt.hive.infrastructure.dns_registers/hive/16.172.in-addr.arpa.drg";
+        file "/etc/bind/dns_registers/hive/16.172.in-addr.arpa.drg";
         allow-update { none; };
 };
 
 zone "hive" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/hive/hive.drg";
+    file "/etc/bind/dns_registers/hive/hive.drg";
+};
+
+zone "tibapp" {
+    type master;
+    file "/etc/bind/dns_registers/hive/tibapp.drg";
 };
 
 zone "local" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/hive/local.drg";
+    file "/etc/bind/dns_registers/hive/local.drg";
 };
