--- a/configuration/inforvault.com.conf
+++ b/configuration/inforvault.com.conf
@@ -22,50 +22,50 @@
 
 zone "amirandamagalhaes.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/amirandamagalhaes.com.drg";
+    file "/etc/bind/dns_registers/inforvault.com/amirandamagalhaes.com.drg";
 };
 
 zone "first-day.pt" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/first-day.pt.drg";
+    file "/etc/bind/dns_registers/inforvault.com/first-day.pt.drg";
 };
 
 zone "inforvault.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/inforvault.com.drg";
+    file "/etc/bind/dns_registers/inforvault.com/inforvault.com.drg";
 };
 
 zone "joamag.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/joamag.com.drg";
+    file "/etc/bind/dns_registers/inforvault.com/joamag.com.drg";
 };
 
 zone "joao.me" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/joao.me.drg";
+    file "/etc/bind/dns_registers/inforvault.com/joao.me.drg";
 };
 
 zone "joaomagalhaes.eu" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/joaomagalhaes.eu.drg";
+    file "/etc/bind/dns_registers/inforvault.com/joaomagalhaes.eu.drg";
 };
 
 zone "joaomagalhaes.info" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/joaomagalhaes.info.drg";
+    file "/etc/bind/dns_registers/inforvault.com/joaomagalhaes.info.drg";
 };
 
 zone "lasbestas.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/lasbestas.com.drg";
+    file "/etc/bind/dns_registers/inforvault.com/lasbestas.com.drg";
 };
 
 zone "lugardajoia.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/lugardajoia.com.drg";
+    file "/etc/bind/dns_registers/inforvault.com/lugardajoia.com.drg";
 };
 
 zone "lugardasjoias.com" {
     type master;
-    file "/etc/bind/pt.hive.infrastructure.dns_registers/inforvault.com/lugardasjoias.com.drg";
+    file "/etc/bind/dns_registers/inforvault.com/lugardasjoias.com.drg";
 };
