new tiberium configuration

--- a/configuration/hive.conf
+++ b/configuration/hive.conf
@@ -31,12 +31,17 @@ zone "hive" {
     file "/etc/bind/dns_registers/hive/hive.drg";
 };
 
+zone "local" {
+    type master;
+    file "/etc/bind/dns_registers/hive/local.drg";
+};
+
 zone "tibapp" {
     type master;
     file "/etc/bind/dns_registers/hive/tibapp.drg";
 };
 
-zone "local" {
+zone "tiberium" {
     type master;
-    file "/etc/bind/dns_registers/hive/local.drg";
+    file "/etc/bind/dns_registers/hive/tiberium.drg";
 };
