new domain name structure

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -25,6 +25,11 @@ zone "alacarte.fm" {
     file "/etc/bind/dns_registers/bemisc.com/alacarte.fm.drg";
 };
 
+zone "amirandamagalhaes.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/amirandamagalhaes.com.drg";
+};
+
 zone "bargania.com" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/bargania.com.drg";
@@ -43,6 +48,11 @@ zone "cargoshiphq.com" {
 zone "cognicis.com" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/cognicis.com.drg";
+};
+
+zone "first-day.pt" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/first-day.pt.drg";
 };
 
 zone "frontdoorhq.com" {
@@ -75,9 +85,49 @@ zone "hive.pt" {
     file "/etc/bind/dns_registers/bemisc.com/hive.pt.drg";
 };
 
+zone "inforvault.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/inforvault.com.drg";
+};
+
+zone "joamag.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/joamag.com.drg";
+};
+
+zone "joao.me" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/joao.me.drg";
+};
+
+zone "joaomagalhaes.eu" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/joaomagalhaes.eu.drg";
+};
+
+zone "joaomagalhaes.info" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/joaomagalhaes.info.drg";
+};
+
 zone "kiliro.com" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/kiliro.com.drg";
+};
+
+zone "lasbestas.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/lasbestas.com.drg";
+};
+
+zone "lugardajoia.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/lugardajoia.com.drg";
+};
+
+zone "lugardasjoias.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/lugardasjoias.com.drg";
 };
 
 zone "ohub.co" {
