new pingu app domain added

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -150,6 +150,11 @@ zone "pecway.com" {
     file "/etc/bind/dns_registers/bemisc.com/pecway.com.drg";
 };
 
+zone "pinguapp.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/pinguapp.com.drg";
+};
+
 zone "pratododia.pt" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/pratododia.pt.drg";
