new dns registers

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -160,6 +160,11 @@ zone "pratododia.pt" {
     file "/etc/bind/dns_registers/bemisc.com/pratododia.pt.drg";
 };
 
+zone "puxiapp.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/puxiapp.com.drg";
+};
+
 zone "startomni.com" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/startomni.com.drg";
