new dns register

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -60,6 +60,11 @@ zone "frontdoorhq.com" {
     file "/etc/bind/dns_registers/bemisc.com/frontdoorhq.com.drg";
 };
 
+zone "frontdoorhd.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/frontdoorhd.com.drg";
+};
+
 zone "getcolony.com" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/getcolony.com.drg";
