new webook domain

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -185,6 +185,11 @@ zone "watchtowerhq.com" {
     file "/etc/bind/dns_registers/bemisc.com/watchtowerhq.com.drg";
 };
 
+zone "webook.pt" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/webook.pt.drg";
+};
+
 zone "whycolony.com" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/whycolony.com.drg";
