new dns register

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -140,6 +140,11 @@ zone "ohub.co" {
     file "/etc/bind/dns_registers/bemisc.com/ohub.co.drg";
 };
 
+zone "oibiquini.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/oibiquini.com.drg";
+};
+
 zone "ostore.co" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/ostore.co.drg";
