changed dns registers to include home

--- a/configuration/hive.conf
+++ b/configuration/hive.conf
@@ -26,6 +26,11 @@ zone "16.172.in-addr.arpa" IN {
         allow-update { none; };
 };
 
+zone "home" {
+    type master;
+    file "/etc/bind/dns_registers/hive/home.drg";
+};
+
 zone "hive" {
     type master;
     file "/etc/bind/dns_registers/hive/hive.drg";
