new hiveinc.co domain

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -90,6 +90,11 @@ zone "hive.pt" {
     file "/etc/bind/dns_registers/bemisc.com/hive.pt.drg";
 };
 
+zone "hiveinc.co" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/hiveinc.co.drg";
+};
+
 zone "inforvault.com" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/inforvault.com.drg";
