--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -1,3 +1,25 @@
+// Hive Infrastructure
+// Copyright (c) 2008-2016 Hive Solutions Lda.
+//
+// This file is part of Hive Infrastructure.
+//
+// Hive Infrastructure is confidential and property of Hive Solutions Lda.,
+// its usage is constrained by the terms of the Hive Solutions
+// Confidential Usage License.
+//
+// Hive Infrastructure should not be distributed under any circumstances,
+// violation of this may imply legal action.
+//
+// If you have any questions regarding the terms of this license please
+// refer to <http://www.hive.pt/licenses/>.
+
+// __author__    = João Magalhães <joamag@hive.pt>
+// __version__   = 1.0.0
+// __revision__  = $LastChangedRevision$
+// __date__      = $LastChangedDate$
+// __copyright__ = Copyright (c) 2008-2016 Hive Solutions Lda.
+// __license__   = Hive Solutions Confidential Usage License (HSCUL)
+
 options {
     directory "/var/bind";
     listen-on { any; };
