--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -26,4 +26,12 @@ options {
     listen-on-v6 { any; };
     pid-file "/var/run/named/named.pid";
     auth-nxdomain no;
+    dnssec-enable no;
+    dnssec-validation no;
+    dnssec-lookaside auto;
+    forwarders first;
+    forwarders {
+        8.8.8.8;
+        8.8.4.4;
+    };
 };
