--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -29,7 +29,7 @@ options {
     dnssec-enable no;
     dnssec-validation no;
     dnssec-lookaside auto;
-    forwarders first;
+    forward first;
     forwarders {
         8.8.8.8;
         8.8.4.4;
