--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -25,6 +25,7 @@ options {
     listen-on { any; };
     listen-on-v6 { any; };
     pid-file "/var/run/named/named.pid";
+    allow-recursion { any; };
     auth-nxdomain no;
     dnssec-enable no;
     dnssec-validation no;
