new recursion support

--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -20,12 +20,19 @@
 // __copyright__ = Copyright (c) 2008-2016 Hive Solutions Lda.
 // __license__   = Hive Solutions Confidential Usage License (HSCUL)
 
+acl "trusted" {
+    127.0.0.1;
+    172.16.0.0/16;
+    192.168.0.0/24;
+    192.168.1.0/24;
+};
+
 options {
     directory "/var/bind";
     listen-on { any; };
     listen-on-v6 { any; };
     pid-file "/var/run/named/named.pid";
-    allow-recursion { any; };
+    allow-recursion { trusted; };
     auth-nxdomain no;
     dnssec-enable no;
     dnssec-validation no;
