--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -32,6 +32,7 @@ options {
     listen-on { any; };
     listen-on-v6 { any; };
     pid-file "/var/run/named/named.pid";
+    recursion yes;
     allow-recursion { trusted; };
     auth-nxdomain no;
     dnssec-enable no;
