new forward operation

--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -21,6 +21,7 @@
 // __license__   = Hive Solutions Confidential Usage License (HSCUL)
 
 acl "trusted" {
+    localhost;
     127.0.0.0/8;
     172.16.0.0/16;
     192.168.0.0/24;
@@ -38,4 +39,9 @@ options {
     dnssec-enable no;
     dnssec-validation no;
     dnssec-lookaside auto;
+    forward first;
+    forwarders {
+        8.8.8.8;
+        8.8.4.4;
+    };
 };
