new version flag change

--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -34,6 +34,7 @@ options {
     listen-on { any; };
     listen-on-v6 { any; };
     pid-file "/var/run/named/named.pid";
+    version "unknown";
     recursion yes;
     allow-recursion { trusted; };
     auth-nxdomain no;
