--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -45,6 +45,11 @@ zone "cargoshiphq.com" {
     file "/etc/bind/dns_registers/bemisc.com/cargoshiphq.com.drg";
 };
 
+zone "cobeacon.com" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/cobeacon.com.drg";
+};
+
 zone "cognicis.com" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/cognicis.com.drg";
