new lastblock register

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -135,6 +135,11 @@ zone "lasbestas.com" {
     file "/etc/bind/dns_registers/bemisc.com/lasbestas.com.drg";
 };
 
+zone "lastblock.io" {
+    type master;
+    file "/etc/bind/dns_registers/bemisc.com/lastblock.io.drg";
+};
+
 zone "lugardajoia.com" {
     type master;
     file "/etc/bind/dns_registers/bemisc.com/lugardajoia.com.drg";
