--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -47,7 +47,7 @@ options {
     auth-nxdomain no;
     dnssec-enable no;
     dnssec-validation no;
-    dnssec-lookaside auto;
+    dnssec-lookaside no;
     forward first;
     forwarders {
         1.1.1.1;
