--- a/configuration/named.conf
+++ b/configuration/named.conf
@@ -48,7 +48,7 @@ options {
     dnssec-enable no;
     dnssec-validation no;
     dnssec-lookaside no;
-    forward first;
+    forward only;
     forwarders {
         1.1.1.1;
         1.0.0.1;
