--- a/configuration/hive.conf
+++ b/configuration/hive.conf
@@ -26,14 +26,19 @@ zone "16.172.in-addr.arpa" IN {
     allow-update { none; };
 };
 
+zone "hive" {
+    type master;
+    file "/etc/bind/dns_registers/hive/hive.drg";
+};
+
 zone "home" {
     type master;
     file "/etc/bind/dns_registers/hive/home.drg";
 };
 
-zone "hive" {
+zone "platforme" {
     type master;
-    file "/etc/bind/dns_registers/hive/hive.drg";
+    file "/etc/bind/dns_registers/hive/platforme.drg";
 };
 
 zone "local" {
