chore: new micados.xyz domain

--- a/configuration/bemisc.com.conf
+++ b/configuration/bemisc.com.conf
@@ -150,6 +150,11 @@ zone "lugardasjoias.com" {
     file "/etc/bind/dns-registers/bemisc.com/lugardasjoias.com.drg";
 };
 
+zone "micados.xyz" {
+    type master;
+    file "/etc/bind/dns-registers/bemisc.com/micados.xyz.drg";
+};
+
 zone "ohub.co" {
     type master;
     file "/etc/bind/dns-registers/bemisc.com/ohub.co.drg";
